Changes file for Business-OnlinePayment-CashCow

$Id: Changes,v 1.2 2005-08-03 20:38:31 jonasbn Exp $

Wed Aug  3 2005 (jonasbn)

- We have a release candidate