@@ -1,16 +1,32 @@
-# $Id: Submit.t,v 1.4 2005-08-03 20:38:31 jonasbn Exp $
+# $Id: Submit.t,v 1.5 2005-08-06 17:02:15 jonasbn Exp $
 
 use strict;
-use Test::More tests => 4;
+use Test::More;
+use Module::Build;
+
+my $build = Module::Build->current;
+my $shopid = $build->notes("shopid");
+
+if (! $shopid) {
+	plan skip_all => 'No CashCow shopid specified skipping tests';	
+} else {
+	plan tests => 4;
+}
 
 use Business::OnlinePayment;
 use_ok('Business::OnlinePayment::CashCow');
 
-ok(my $tx = Business::OnlinePayment->new("CashCow"));
+ok(my $tx = Business::OnlinePayment->new
+	("CashCow", 
+#		{ 
+#			shopid => $shopid; 
+#			TestFlg	    => 1,
+#
+#		}
+	)
+);
 
 $tx->content(
-	TestFlg	    => 1,
-	shopid	    => 'foniristele',
 	type        => 'VISA',
 	amount      => '1.00',
 	card_number => '5413037279946869',
@@ -19,6 +35,6 @@ $tx->content(
 	cvc		    => '628',
 );
 
-ok($tx->submit());
 
+ok($tx->submit());
 ok($tx->is_success);
